# toyplot

./: .gitignore  .travis.yml  README.md  backend-report.py  behave.ini  pylintrc  pypi-stat.py  pyproject.toml  regression.py  setup.cfg  setup.py
artwork/: toyplot.lxo
conda.recipe/: meta.yaml
design/: .gitignore  Untitled.ipynb  alignment-sandbox.ipynb  annotation.ipynb  autorendering.ipynb  axis-label-alignment.ipynb  axis-units.ipynb  axis.ipynb  backend-naming.ipynb  bars.ipynb  baseline-shift-bug.ipynb  cardinalities.ipynb  color-palettes.ipynb  color-refactoring.ipynb  color-scale.ipynb  color-specifications.ipynb  color-swatch.ipynb  colormaps.ipynb  column-formatters.ipynb  custom-marker.ipynb  custom-markers.ipynb  data-storage.ipynb  data-table-indexing.ipynb  date-time-domain.ipynb  dual-axes.ipynb  embedding.py  equation.tex  event-plot.ipynb  fill-arguments.ipynb  font-size-units.html  graph-algorithms.ipynb  graph-api.ipynb  graph-coordinate-sharing.ipynb  graph-vertex-labels.ipynb  grouped-bars.ipynb  horizontal legends.ipynb  html-refactoring.ipynb  hvlines-annotation.ipynb  image-display.ipynb  label-location.ipynb  (+66 more)
docker/: setup.py
docs/: .gitignore  Makefile  anaconda-installation.rst  arrow.inv  axes.ipynb  axes.rst  backends.rst  build.py  canvas-layout.ipynb  canvas-layout.rst  cars.csv  cartesian-axes.ipynb  cartesian-axes.rst  cartesian-coordinates.ipynb  cartesian-coordinates.rst  case-studies.rst  co2-pop.csv  co2-pop.ipynb  color-mapping.ipynb  color-mapping.rst  color.ipynb  color.rst  colors.ipynb  colors.rst  communities-case-study.ipynb  communities-case-study.rst  communities.assigned  communities.edges  communities.ground-truth  (+132 more)
(+331 files in other folders)
